--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
       <option value="synonyms">Synonyms</option>
       <option value="antonyms">Antonyms</option>
       <option value="academic">Academic Words</option>
+      <option value="definitionMatch">Definition Match</option>
+      <option value="synonymContrast">Synonym Contrast</option>
+      <option value="morphologicalAffix">Morphological Affix</option>
+      <option value="collocationCloze">Collocation Cloze</option>
+      <option value="grammaticalRole">Grammatical Role</option>
+      <option value="connectorClue">Connector Clue</option>
     </select>
 
     <label for="timer-setting">⏳ Timer (sec):</label>
