--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <option value="synonyms">Synonyms</option>
       <option value="antonyms">Antonyms</option>
       <option value="academic">Academic Words</option>
+      <option value="contextInference">Context Inference</option>
       <option value="definitionMatch">Definition Match</option>
       <option value="synonymContrast">Synonym Contrast</option>
       <option value="morphologicalAffix">Morphological Affix</option>
