--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       <option value="theme1">Pastel</option>
       <option value="theme2">Forest</option>
     </select>
+       <p id="available-themes"></p>
   </aside>
 
   <!-- Main Game Content -->
@@ -101,6 +102,7 @@
     <div class="status-bar">
       <span id="progress"></span>
       <span id="score"></span>
+         <span id="coins"></span>
       <span id="stars"></span>
       <span id="timer"></span>
       <div id="progress-bar-container" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
