--- a/index.html
+++ b/index.html
@@ -73,7 +73,14 @@
       <option value="theme1">Pastel</option>
       <option value="theme2">Forest</option>
     </select>
-       <p id="available-themes"></p>
+    
+       <div id="dashboard" class="dashboard">
+      <h3>Progress</h3>
+      <p id="completed-count">Completed: 0</p>
+      <p id="total-score-summary">Score: 0</p>
+      <p id="missed-clues-summary">Top Missed Clues: none</p>
+      <button id="export-stats-btn">Export Stats</button>
+    </div>
   </aside>
 
   <!-- Main Game Content -->
