--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
       <option value="grammaticalRole">Grammatical Role</option>
       <option value="connectorClue">Connector Clue</option>
     </select>
-
+ <label for="level-select">🔢 Level:</label>
+    <select id="level-select">
+      <option value="p1" selected>P1</option>
+      <option value="p2">P2</option>
+    </select>
     <label for="timer-setting">⏳ Timer (sec):</label>
     <select id="timer-setting">
       <option value="60" selected>60</option>
