--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         <div id="timer-bar"></div>
       </div>
       <span id="level"></span>
+      <span id="themes-info"></span>
       <span id="achievements"></span>
     </div>
   </main>
