--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     <select id="level-select">
       <option value="p1" selected>P1</option>
       <option value="p2">P2</option>
+      <option value="p3">P3</option>
+      <option value="p4">P4</option>
+      <option value="p5">P5</option>
+      <option value="p6">P6</option>
     </select>
     <label for="timer-setting">⏳ Timer (sec):</label>
     <select id="timer-setting">
